--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -14,6 +14,37 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
+        <div class="navigation">
+            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+            <label for="navi-toggle" class="navigation__button">
+                <span class="navigation__icon">
+                    &nbsp;
+                </span>
+            </label>
+            <div class="navigation__background">
+                &nbsp;
+            </div>
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link"><span>01</span> About Natous</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link"><span>02</span>Your benefits</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link"><span>03</span>Popular tours</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link"><span>04</span>Stories</a>
+                    </li>
+                    <li class="navigation__item">
+                        
+                        <a href="#" class="navigation__link"><span>05</span>Book now</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
         <header class="header">
             <div class="header__logo-box">
                 <img src="./img/logo-white.png" alt="Logo" class="header__logo">
@@ -28,8 +59,8 @@
                     </span>
                 </h1>
 
-                <a href="#" class="btn btn--white btn--animated">
-                    Discovery our tours
+                <a href="#section-tours" class="btn btn--white btn--animated">
+                    Discover our tours
                 </a>
             </div>
         </header>
@@ -121,7 +152,7 @@
                 </div>
             </section>
 
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -156,7 +187,7 @@
                                        <p class="card__price-value">
                                            $297
                                        </p>
-                                       <a href="#" class="btn btn--white">Book Now</a>
+                                       <a href="#popup" class="btn btn--white">Book Now</a>
                                    </div>
                                </div>    
                             </div>
@@ -376,6 +407,26 @@
                 </div>
             </div>
         </footer>
+
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="tour photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="tour photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                   <h2 class="heading-secondary u-margin-bottom-medium">Start booking now</h2>
+                   <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; please read term </h3>
+                   <p class="popup__text">
+                       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis aliquid illo sapiente ad ea vel, incidunt nemo labore quo recusandae nostrum ullam. Cum, consequatur doloribus eum in id ducimus accusantium.
+
+                   </p>
+                   <a href="#" class="btn btn--green">Book Now</a>
+                </div>
+
+            </div>
+        </div>
 <!--         
         <section class="grid-test">
             <div class="row">
