--- a/Trillo/starter/index.html
+++ b/Trillo/starter/index.html
@@ -157,7 +157,7 @@
                             </ul>
                             <div class="recommend">
                                 <p class="recommend__count">
-                                    Lucy and 3 other firends reccomend..
+                                    Lucy and 3  recomend
                                 </p>
                                 <div class="recommend__friends">
                                     <img src="img/user-3.jpg" alt="1" class="recommend__photo">
@@ -206,6 +206,17 @@
                             </figure>
                             <button class="btn-inline">Show all <span>&rarr;</span></button>
                         </div>
+                        
+                       
+                    </div>
+                    <div class="cta">
+                        <h2 class="cta__book-now">
+                            Good News! we have 4 free rooms for your selected dates!
+                        </h2>
+                        <button class="btn">
+                            <span class="btn__visible">Book Now</span>
+                            <span class="btn__invisible">Only 4 rooms left</span>                            
+                        </button>
                     </div>
                 </main>
             </div>
